flapivor/tests/m1/hopix/parser/bad/29-string-literal-3.hopix
val s = "Python\b\b\o\b\b\bOCaml rocks!\n"